[package]
name = "firm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost-build = "0.11.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openldap = "1.2.2"
rpassword = "7.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[build-dependencies]
tonic-build = "0.7"
